# eth_supermegabot

./: .gitignore  README.md  dependencies.rosinstall
maplab_bosch/tools/evaluation_tools/: .gitignore  CMakeLists.txt  package.xml  setup.py
maplab_bosch/tools/evaluation_tools/datasets/: datasets.yaml
maplab_bosch/tools/evaluation_tools/experiments/: sample_experiment.yaml
maplab_bosch/tools/evaluation_tools/parameter_files/: sample_parameters_1.yaml  sample_parameters_with_sweep.yaml
maplab_bosch/tools/evaluation_tools/src/: evaluation-data-collector.cc
maplab_bosch/tools/evaluation_tools/test/: test_evaluation.py  test_job.py
maplab_bosch/tools/maplab_test_data/: CMakeLists.txt  README.md  package.xml
maplab_bosch/tools/maplab_test_data/cmake/: maplab-import-test-maps.cmake.in
smb_launchers/: CMakeLists.txt  package.xml
smb_launchers/launch/: smb_complete.launch
summer_school_private/anymal_research/any_description/: CMakeLists.txt  package.xml
summer_school_private/anymal_research/any_description/launch/: load.launch  standalone.launch
summer_school_private/anymal_research/any_description/urdf/: debug_sensors.urdf.xacro  gazebo_controller.gazebo.xacro  materials.urdf.xacro
summer_school_private/anymal_research/any_gazebo_msgs/: CMakeLists.txt  package.xml
summer_school_private/anymal_research/any_hector_gazebo_plugins/: CMakeLists.txt  package.xml
summer_school_private/anymal_research/any_hector_gazebo_plugins/cfg/: GNSS.cfg  SensorModel.cfg
summer_school_private/anymal_research/any_hector_gazebo_plugins/src/: gazebo_ros_imu.cpp
summer_school_private/anymal_research/any_measurements/: package.xml
summer_school_private/anymal_research/any_measurements_ros/: CMakeLists.txt  Readme.md  package.xml
summer_school_private/anymal_research/any_measurements_ros/test/: ConversionTraitsTest.cpp
summer_school_private/anymal_research/any_msgs/: CMakeLists.txt  package.xml
summer_school_private/anymal_research/any_msgs/msg/: Event.msg  Float64Stamped.msg  ImuWithTrigger.msg  PointContact.msg  SensorTimeInfo.msg  State.msg  UserInteractionOption.msg
summer_school_private/anymal_research/any_msgs/srv/: GetString.srv  ProcessFile.srv  SetFloat32.srv  SetFloat64.srv  SetPose.srv  SetString.srv  SetTopic.srv  UserInteraction.srv
summer_school_private/anymal_research/any_node/: CMakeLists.txt  Readme.md  package.xml
summer_school_private/anymal_research/any_node/src/: Node.cpp
summer_school_private/anymal_research/any_rbdl/: .gitattributes  .gitignore  .hgignore  CMakeLists.txt  README.md  package.xml
summer_school_private/anymal_research/any_rbdl/doc/: Mainpage.h  api_changes.txt  example.h
summer_school_private/anymal_research/any_rbdl/src/: Body.cc  Contacts.cc  Dynamics.cc  Joint.cc  Kinematics.cc  Logging.cc  Model.cc  rbdl_mathutils.cc  rbdl_utils.cc
summer_school_private/anymal_research/any_rbdl/tests/: BodyTests.cc  CalcAccelerationsTests.cc  (+17 more)
summer_school_private/confusion/: .gitignore  CMakeLists.txt  bitbucket-pipelines.yml  package.xml
summer_school_private/confusion/doc/: getting_started.dox  installation.dox  mainpage.dox
summer_school_private/confusion/example/: tagtracker_config.cfg  vi_test.bag
summer_school_private/confusion/matlab/: importConFusionData.m  plotConFusionData.m
summer_school_private/confusion/msg/: OdomWithState.msg  TagArray.msg  TagMsg.msg
summer_school_private/confusion/src/: BatchFusor.cpp  ConFusor.cpp  Diagram.cpp  DrawDiagramDemo.cpp  ImuPropagator.cpp  Logger.cpp  MeasurementManager.cpp
summer_school_private/confusion/test/: ImuChainTest.cpp  MeasurementManagerTest.cpp  PriorCostTest.cpp  distancesTest.cpp  marginalizationTest.cpp  parameterizationTest.cpp
summer_school_private/detector/: CMakeLists.txt  package.xml
summer_school_private/detector/src/: detector.cc  utils.cc
summer_school_private/libvisensor_devel/: .gitignore  Doxyfile.in  Doxyfile_API.in  install_libvisensor.sh  package.xml
summer_school_private/libvisensor_devel/cmake/: FindVISensor.cmake  FindYamlCpp.cmake
summer_school_private/libvisensor_devel/include/: visensor_impl.hpp
summer_school_private/libvisensor_devel/src/: visensor_impl.cpp
summer_school_private/libvisensor_devel/test/: file_transfer-test.cpp  visensor_configuration-test.cpp
summer_school_private/rocoma_rqt/: CMakeLists.txt  Readme.md  package.xml  plugin.xml  setup.py
summer_school_private/rocoma_rqt/resource/: rocoma_rqt_plugin.ui
summer_school_private/rocoma_rqt/scripts/: rocoma_rqt
summer_school_private/smb_confusor/: .gitignore  package.xml  smb_estimator.rviz
summer_school_private/smb_confusor/config/: smb_calibration.cfg
summer_school_private/smb_confusor/src/: BmmPropagator.cpp  SmbConFusor.cpp  SmbPropagatorTester.cpp
summer_school_private/smb_highlevel_controller/: CMakeLists.txt  package.xml
summer_school_private/smb_highlevel_controller/config/: controllers.yaml  joy_parameters.yaml  kinova.yaml  parameters.yaml  publishers.yaml  subscribers.yaml
summer_school_private/smb_highlevel_controller/launch/: smb_highlevel_controller.launch
summer_school_private/smb_highlevel_controller/src/: SmbHighLevelController.cpp  smb_highlevel_controller_node.cpp
summer_school_private/smb_odometry_publisher/: CMakeLists.txt  package.xml
summer_school_private/smb_odometry_publisher/launch/: smb_odometry_publisher.launch
summer_school_private/smb_odometry_publisher/src/: smb_odometry_publisher.cc
summer_school_private/smb_state_estimator/: CMakeLists.txt  package.xml
summer_school_private/smb_state_estimator/config/: parameters.yaml  publishers.yaml  subscribers.yaml  wacoCalibration.xml
summer_school_private/smb_state_estimator/launch/: smb_state_estimator.launch  waco_state_estimator_gdb.launch  waco_state_estimator_no_lpc.launch
summer_school_private/smb_state_estimator/matlab/: waco_state_estimator.m
summer_school_private/smb_state_estimator/src/: SmbStateEstimator.cpp  smb_state_estimator_node.cpp
tools/odometry_publisher/: CMakeLists.txt  package.xml
tools/odometry_publisher/launch/: odometry_publisher.launch
(+1730 files in other folders)
