<?xml version="1.0"?>
<package format="2">
  <name>smb_launchers</name>
  <version>0.1.0</version>
  <description>
    Essential launchers for the SMB.
  </description>

  <author email="davidw@robots.ox.ac.uk">David Wisth</author>
  <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rslidar_pointcloud</depend>
  <depend>smb_common</depend>
  <depend>smb_description</depend>
  <depend>smb_highlevel_controller</depend>
  <depend>smb_lowlevel_controller</depend>
  <depend>smb_state_estimator</depend>
  <depend>smb_tf_publisher</depend>

</package>
