<?xml version="1.0"?>
<package format="2">
  <name>detector</name>
  <version>0.1.0</version>
  <description>Package for simple object detection in images</description>

  <maintainer email="andrei.cramariuc@mavt.ethz.ch">Andrei Cramariuc</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>image_transport</depend>
  <depend>opencv3_catkin</depend>
  <depend>aslam_cv_cameras</depend>
</package>
