<?xml version="1.0"?>
<package>
  <name>libvisensor</name>
  <version>2.4.1</version>
  <description>

	Driver for the communication with the VI-Sensor

  </description>
  <url>http://www.skybotix.com</url>
  <author>Michael Burri, Pascal Gohl and Thomas Schneider</author>
  <maintainer email="pascal.gohl@mavt.ethz.ch">Pascal Gohl</maintainer>
  <license>Propriatary</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
</package>
