<?xml version="1.0"?>
<package format="2">
  <name>rocoma_rqt</name>
  <version>0.0.1</version>
  <description>The rqt_controlmanager package</description>

  <maintainer email="pankertj@ethz.ch">Johannes Pankert</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>rocoma_msgs</depend>
  <depend>message_logger</depend>

  <export>
  <architecture_independent/>
  <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
