<?xml version="1.0"?>

<package format="2">

  <name>smb_confusor</name>
  <version>0.1.1</version>
  <description>The smb_confusor package</description>
  
  <license>Proprietary</license>
  <maintainer email="tsandy@mavt.ethz.ch">Tim Sandy</maintainer>
  <author email="tsandy@mavt.ethz.ch">Tim Sandy</author>
  <url type="website">https://bitbucket.org/leggedrobotics/smb_confusor</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>confusion</depend>
  <depend>opencv3_catkin</depend>
</package>
