<?xml version="1.0"?>
<package format="2">
  <name>smb_highlevel_controller</name>
  <version>0.1.4</version>
  <description>smb_highlevel_controller</description>
  <maintainer email="tsandy@ethz.ch">Tim Sandy</maintainer>
  <license>Proprietary</license>
  <author email="tsandy@ethz.ch">Tim Sandy</author>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>
  <depend>any_msgs</depend>
  <depend>kindr_ros</depend>
  <depend>smb_msgs</depend>
  <depend>parameter_handler_ros</depend>
  <depend>robot_utils</depend>
  <depend>robot_utils_ros</depend>
  <depend>joy_manager_msgs</depend>
  <depend>roco</depend>
  <depend>roscpp</depend>
  <depend>any_node</depend>
  <depend>message_logger</depend>
  <depend>signal_logger</depend>
  <depend>signal_logger_ros</depend>
  <depend>signal_logger_std</depend>
  <depend>notification</depend>
  <depend>smb_ros</depend>
  <depend>smb_model</depend>
  <depend>smb_common</depend>
  <depend>smb_description</depend>
  <depend>smb_description_ros</depend>
  <depend>smb_roco</depend>
  <depend>signal_handler</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>cosmo_ros</depend>
  <depend>param_io</depend>
  <depend>rocoma_ros</depend>
  <depend>smb_failproof_controller</depend>
  <depend>smb_emergency_controller</depend>
  <depend>smb_joystick_controller</depend>
</package>
