<?xml version="1.0"?>
<package format="2">
  <name>smb_odometry_publisher</name>
  <version>0.0.0</version>
  <description>The smb_odometry_publisher package</description>
  <maintainer email="ftschopp@ethz.ch">Florian Tschopp</maintainer>
  <license>closed</license>
  <url type="website">https://github.com/ethz-asl/eth_robotics_summer_school_2019</url>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
