<?xml version="1.0"?>

<package format="2">

  <name>smb_state_estimator</name>
  <version>0.1.1</version>
  <description>The smb_state_estimator package</description>
  
  <license>Proprietary</license>
  <maintainer email="tsandy@mavt.ethz.ch">Tim Sandy</maintainer>
  <author email="tsandy@mavt.ethz.ch">Tim Sandy</author>
  <url type="website">https://bitbucket.org/leggedrobotics/smb_state_estimator</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>any_state_estimator</depend>
  <depend>roscpp</depend>
  <depend>any_node</depend>
  <depend>robot_utils</depend>
  <depend>robot_utils_ros</depend>
  <depend>any_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>notification</depend>
  <depend>message_logger</depend>
  <depend>any_measurements</depend>
  <depend>any_measurements_ros</depend>
  <depend>cosmo_ros</depend>
  <depend>signal_logger</depend>
  <depend>signal_logger_ros</depend>
  <depend>signal_logger_std</depend>
  <depend>smb_description_ros</depend>
  <depend>confusion</depend>
  <depend>smb_confusor</depend>

</package>
