<?xml version="1.0"?>

<package format="2">

  <name>any_description</name>
  <version>0.6.0</version>
  <description>Xacro snippets for Gazebo and urdf file generation.</description>

  <license>BSD</license>

  <author email="bellicoso@mavt.ethz.ch">Dario Bellicoso</author>
  <maintainer email="bellicoso@mavt.ethz.ch">Dario Bellicoso</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
