<?xml version="1.0"?>

<package format="2">

  <name>any_node</name>
  <version>0.5.0</version>
  <description>ROS node wrapper with some convenience functions using *any_worker*.</description>

  <license>BSD</license>

  <author email="pleemann@anybotics.com">Philipp Leemann</author>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>any_worker</depend>
  <depend>message_logger</depend>
  <depend>param_io</depend>
  <depend>roscpp</depend>
  <depend>signal_handler</depend>

</package>
